LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/Loyalty_Program_Setup_Rules__c.object-meta.xml
<CustomObject>
    <label>Loyalty Program Setup Rule</label>
    <nameField>
        <label>Loyalty Program Setup Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loyalty Program Setup Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>