LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <formula>ISPICKVAL(Rule_Status__c, &apos;Active&apos;) = true &amp;&amp; (ISBLANK(Valid_From__c)=true || Valid_From__c &lt;=  TODAY()) &amp;&amp; (ISBLANK(Valid_To__c)=true || TODAY()&lt;= Valid_To__c)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>