LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Assign_Points__c.field-meta.xml
<CustomField>
    <fullName>Assign_Points__c</fullName>
    <label>Assign Points</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>