LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Assign_Points_Factor__c.field-meta.xml
<CustomField>
    <fullName>Assign_Points_Factor__c</fullName>
    <label>Assign Points Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>