LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Assign_Points_Factor_Operator__c.field-meta.xml
<CustomField>
    <fullName>Assign_Points_Factor_Operator__c</fullName>
    <label>Assign Points Factor Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loyalty_Operator</valueSetName>
    </valueSet>
</CustomField>