LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Assign_Points_Factor_Type_Value__c.field-meta.xml
<CustomField>
    <fullName>Assign_Points_Factor_Type_Value__c</fullName>
    <label>Assign Points Factor Type Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>