LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Assign_Points_Field_Value_Name__c.field-meta.xml
<CustomField>
    <fullName>Assign_Points_Field_Value_Name__c</fullName>
    <label>Assign Points Field Value Name</label>
    <length>200</length>
    <type>Text</type>
</CustomField>