LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Customer_Behaviour_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Behaviour_Count__c</fullName>
    <label>Customer Behaviour Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>