LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Customer_Behaviour_Factor__c.field-meta.xml
<CustomField>
    <fullName>Customer_Behaviour_Factor__c</fullName>
    <label>Customer Behaviour Factor</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>