LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Loyalty_Program_Setup__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Program_Setup__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Loyalty Program Setup</label>
    <referenceTo>Loyalty_Program_Setup__c</referenceTo>
    <relationshipLabel>Loyalty Program Setup Rules</relationshipLabel>
    <relationshipName>Loyalty_Program_Setup_Rules</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>