LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Object_Rules__c.field-meta.xml
<CustomField>
    <fullName>Object_Rules__c</fullName>
    <label>Object Rules</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>