LoyaltyApp/force-app/main/default/objects/Loyalty_Program_Setup_Rules__c/fields/Rule_Status__c.field-meta.xml
<CustomField>
    <fullName>Rule_Status__c</fullName>
    <label>Rule Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Loyalty_Rule_Status</valueSetName>
    </valueSet>
</CustomField>